Remove redundant constructors from CreateSchema